[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/gui/animation/skill_cutin.gd" id="1"]

[node name="SkillCutIn" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Band" type="ColorRect" parent="."]
anchors_preset = 0
offset_left = 0.0
offset_top = 470.0
offset_right = 1920.0
offset_bottom = 590.0
mouse_filter = 2
color = Color(0.1, 0, 0.2, 0.8)

[node name="NicknameLabel" type="Label" parent="Band"]
anchors_preset = 0
offset_left = 0.0
offset_top = 5.0
offset_right = 1920.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Nickname"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillLabel" type="Label" parent="Band"]
anchors_preset = 0
offset_left = 0.0
offset_top = 40.0
offset_right = 1920.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Skill Name"
horizontal_alignment = 1
vertical_alignment = 1
